Issue 52190: Expose Postgres connections and locks to admins (#6304)